--- a/Eternity/code/digital-life-mvp/package.json
+++ b/Eternity/code/digital-life-mvp/package.json
@@ -22,6 +22,7 @@
     "@tiptap/starter-kit": "^3.15.3",
     "html2canvas": "^1.4.1",
     "jspdf": "^4.0.0",
+    "lightningcss-darwin-arm64": "^1.28.2",
     "next": "16.0.10",
     "openai": "^6.16.0",
     "react": "19.2.1",
