--- a/Eternity/code/digital-life-mvp/package.json
+++ b/Eternity/code/digital-life-mvp/package.json
@@ -20,15 +20,21 @@
     "@tiptap/pm": "^3.15.3",
     "@tiptap/react": "^3.15.3",
     "@tiptap/starter-kit": "^3.15.3",
+    "@types/leaflet": "^1.9.21",
+    "happy-dom": "^20.3.4",
     "html2canvas": "^1.4.1",
     "jspdf": "^4.0.0",
+    "leaflet": "^1.9.4",
     "lightningcss-darwin-arm64": "^1.28.2",
     "next": "16.0.10",
     "openai": "^6.16.0",
     "react": "19.2.1",
     "react-dom": "19.2.1",
+    "react-leaflet": "^5.0.0",
     "resend": "^6.7.0",
-    "stripe": "^20.1.2"
+    "stripe": "^20.1.2",
+    "vis-data": "^8.0.3",
+    "vis-timeline": "^8.5.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
