--- a/Eternity/code/digital-life-mvp/package.json
+++ b/Eternity/code/digital-life-mvp/package.json
@@ -21,13 +21,16 @@
     "@tiptap/react": "^3.15.3",
     "@tiptap/starter-kit": "^3.15.3",
     "@types/leaflet": "^1.9.21",
+    "@types/qrcode": "^1.5.6",
     "happy-dom": "^20.3.4",
     "html2canvas": "^1.4.1",
+    "jose": "^6.1.3",
     "jspdf": "^4.0.0",
     "leaflet": "^1.9.4",
     "lightningcss-darwin-arm64": "^1.28.2",
     "next": "16.0.10",
     "openai": "^6.16.0",
+    "qrcode": "^1.5.4",
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-leaflet": "^5.0.0",
