--- a/Eternity/code/digital-life-mvp/package.json
+++ b/Eternity/code/digital-life-mvp/package.json
@@ -22,6 +22,7 @@
     "@tiptap/starter-kit": "^3.15.3",
     "@types/leaflet": "^1.9.21",
     "@types/qrcode": "^1.5.6",
+    "dotenv": "^17.2.3",
     "happy-dom": "^20.3.4",
     "html2canvas": "^1.4.1",
     "jose": "^6.1.3",
@@ -30,6 +31,7 @@
     "lightningcss-darwin-arm64": "^1.28.2",
     "next": "16.0.10",
     "openai": "^6.16.0",
+    "puppeteer": "^24.36.0",
     "qrcode": "^1.5.4",
     "react": "19.2.1",
     "react-dom": "19.2.1",
